--- a/modelsapi.app/package.json
+++ b/modelsapi.app/package.json
@@ -12,6 +12,7 @@
     "bootstrap-vue": "^2.14.0",
     "core-js": "^3.6.4",
     "moment": "^2.25.3",
+    "vee-validate": "^3.3.0",
     "vue": "^2.6.11",
     "vue-moment": "^4.1.0",
     "vue-router": "^3.1.6",
